--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "devDependencies": {
     "tailwindcss": "^3.4.10"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
